<resources>
    <string name="app_name">TestForEffectiveMobile</string>
    <string name="catalogue">Каталог</string>
    <string name="favorite">Избранное</string>
    <string name="profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explorer">Explorer</string>
    <string name="filter">фильтр</string>
    <string name="select_category">Select category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="new_word">New</string>
    <string name="best_seller">Best seller</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="product_detail">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart">Cart</string>
    <string name="my_cart">My Cart</string>

    <string name="add_address">Add address</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="free">free</string>
    <string-array name="regions">
        <item>Екатеринбург</item>
        <item>Нижний Новгород</item>
        <item>Москва</item>
        <item>Бостон</item>
    </string-array>
</resources>