<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseGray"
    tools:context=".presentation.screens.fragments.cart.CartFragment">

    <include
        android:id="@+id/cart_toolbar"
        layout="@layout/inc_toolbar_with_actions" />

    <TextView
        android:id="@+id/my_cart_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/mark_pro"
        android:text="@string/my_cart"
        android:textAlignment="textStart"
        android:textColor="@color/baseBlue"
        android:textFontWeight="700"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/background_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_cart_text">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/products"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:layout_marginTop="4dp"
                        tools:listitem="@layout/item_cart"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/view_cart_info"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_cart_info"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/darkBlue"
                        app:layout_constraintBottom_toTopOf="@id/total_text" />

                    <TextView
                        android:id="@+id/total_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/total"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/delivery_text"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/delivery"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/delivery"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="$6,000 us" />

                    <TextView
                        android:id="@+id/delivery_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginBottom="26dp"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/delivery"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/view_checkout"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="26dp"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/free"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/view_checkout"
                        app:layout_constraintStart_toStartOf="@id/total" />

                    <View
                        android:id="@+id/view_checkout"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="24dp"
                        android:background="@color/darkBlue"
                        app:layout_constraintBottom_toTopOf="@id/checkout_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/checkout_button"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_margin="44dp"
                        android:backgroundTint="@color/baseOrange"
                        android:text="@string/checkout"
                        android:textAllCaps="false"
                        app:cornerRadius="10dp"
                        app:elevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>




            </androidx.core.widget.NestedScrollView>



        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>